Try to multi browser

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>POM_BANKGURU_12_TAMNPM</name>
+	<name>POM_NOPCOMMERCE_12_TAMNPM</name>
 	<comment></comment>
 	<projects>
 	</projects>
