--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,40 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="libaries/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libaries/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="libaries/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libaries/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="libaries/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libaries/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="libaries/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libaries/config-1.3.2.jar"/>
+	<classpathentry kind="lib" path="libaries/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="libaries/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libaries/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="libaries/guice-4.1.0.jar"/>
+	<classpathentry kind="lib" path="libaries/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="libaries/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="libaries/httpclient-4.5.9.jar"/>
+	<classpathentry kind="lib" path="libaries/httpcore-4.4.10.jar"/>
+	<classpathentry kind="lib" path="libaries/jackson-annotations-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libaries/jackson-core-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libaries/jackson-databind-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libaries/jarchivelib-1.0.0.jar"/>
+	<classpathentry kind="lib" path="libaries/javafaker-0.14.jar"/>
+	<classpathentry kind="lib" path="libaries/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="libaries/joda-time-2.0.jar"/>
+	<classpathentry kind="lib" path="libaries/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="libaries/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="libaries/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="libaries/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libaries/mockito-core-1.10.8.jar"/>
+	<classpathentry kind="lib" path="libaries/owner-1.0.8.jar"/>
+	<classpathentry kind="lib" path="libaries/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libaries/slf4j-api-1.7.24.jar"/>
+	<classpathentry kind="lib" path="libaries/snakeyaml-1.15.jar"/>
+	<classpathentry kind="lib" path="libaries/sqlite-jdbc-3.8.11.1.jar"/>
+	<classpathentry kind="lib" path="libaries/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="libaries/velocity-dep-1.5.jar"/>
+	<classpathentry kind="lib" path="libaries/webdrivermanager-3.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
